# platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.gruntwork/: environment-tutorial.hcl  repository.hcl
app/: database.py  logging.py  main.py  models.py  order_management_ui.py  schemas.py  services.py  telemetry.py
observability/: alertmanager.yml  loki.yaml  otel-collector-config.yaml  prometheus-alerts.yml  prometheus.yml  promtail.yaml  tempo.yaml
observability/grafana/provisioning/dashboards/: dashboard-provider.yaml  python-endpoint-status.json  python-oltp-overview.json
observability/grafana/provisioning/datasources/: datasources.yaml
tests/: test_app.py
tutorial/_global/pipelines-tutorial-1781606301977/pipelines-tutorial/: terragrunt.hcl
