[project]
name = "oltp-python-app"
version = "0.1.0"
description = "A small FastAPI application with transactional OLTP behavior."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "opentelemetry-api>=1.36.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0,<1.0.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0,<1.0.0",
    "opentelemetry-sdk>=1.36.0,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
